src/main/java/com/Parser/文法.txt
Program     → StmtList
StmtList    → Stmt StmtList | ε
Stmt        → DeclStmt | AssignStmt | Block
DeclStmt    → 'int' IDENTIFIER ';' | 'int' IDENTIFIER '[' NUMBER ']' ';'
AssignStmt  → IDENTIFIER '=' Expr ';' | IDENTIFIER '[' Expr ']' '=' Expr ';'
Block       → '{' StmtList '}'
Expr        → Term Expr'
Expr'       → ('+'|'-') Term Expr' | ε
Term        → Factor Term'
Term'       → ('*'|'/') Factor Term' | ε
Factor      → IDENTIFIER | NUMBER | '(' Expr ')' | IDENTIFIER '[' Expr ']'
